--- a/estilo/base.css
+++ b/estilo/base.css
@@ -1,3 +1,29 @@
-body{
+@import url(reset.css);
+.barra{
+    width: 100vw;
+}
+.barra_conteudo{
+    display: flex;
     background-color: olive;
+    width: 100vw;
+    height: 70px;
+    flex-direction: row;
+    justify-content: end;
+    color: lightpink;
+    box-shadow: 3px 5px 5px lightpink;
+}
+.btn{
+    background-color: rgb(144, 190, 221);
+    cursor: pointer;
+}
+.login button{
+    border-radius: 5px;
+}
+.barra_info{
+    display: flex;
+    width: 50vw;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    font-size: 30px;
 }
